--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
+    "puppeteer-core": "^21.3.8",
     "cors": "^2.8.5"
   }
 }
