--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "scripts": {
     "start": "node api/scrape.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^21.3.8",
