--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "name": "go-nogo-scraper",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node api/scrape.js"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer-core": "^21.3.8",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5"
   }
 }
