--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "^21.3.8",
-    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "10.1.0",
+    "chrome-aws-lambda": "10.1.0",
     "cors": "^2.8.5"
   }
 }
+
