--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "go-nogo-scraper",
-  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node api/scrape.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer-core": "10.1.0",
-    "chrome-aws-lambda": "10.1.0",
+    "puppeteer": "^21.3.8",
     "cors": "^2.8.5"
   }
 }
-
