--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "puppeteer": "^21.3.8",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "chrome-aws-lambda": "^10.1.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
-"puppeteer": "^21.3.8"
