--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
     "start": "node api/scrape.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
-    "chrome-aws-lambda": "^10.1.0"
-  },
-  "engines": {
-    "node": "20.x"
+    "express": "^4.18.2",
+    "puppeteer-core": "^10.1.0"
   }
 }
