--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "start": "node api/scrape.js"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer-core": "^10.1.0"
+    "puppeteer": "^21.3.8",
+    "cors": "^2.8.5"
   }
 }
