--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "name": "go-nogo-scraper",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node api/scrape.js"
+    "start": "node api/scrape.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "puppeteer": "^21.3.8"
   }
 }
