--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "go-nogo-scraper",
   "version": "1.0.0",
   "type": "module",
+  "main": "api/scrape.js",
   "scripts": {
     "start": "node api/scrape.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.19.2"
   }
 }
