--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "go-nogo-scraper",
   "version": "1.0.0",
   "type": "module",
-  "main": "api/scrape.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/scrape.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.19.2"
   }
