--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "go-nogo-scraper",
   "version": "1.0.0",
+  "description": "Simple scraper for average price from aucfan",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.19.2"
+    "express": "^4.18.2"
   }
 }
