--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.8",
+    "puppeteer": "^22.0.0"
   }
-}
-"dependencies": {
-  "puppeteer": "^22.0.0",
-  "express": "^4.18.2",
-  "dotenv": "^16.3.1"
 }
