--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "go-nogo-scraper",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.8",
-    "puppeteer": "^22.0.0"
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "puppeteer": "^22.7.1"
   }
 }
