--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "puppeteer": "^22.7.1"
+    "puppeteer": "^22.6.3",
+    "dotenv": "^16.4.5"
   }
 }
